<resources>
    <string name="app_name">Alumni App</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_hint">Email</string>
    <string name="no_handphone">No Handphone</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="save">Save</string>
    <string name="bio">Bio</string>
    <string name="edit">Edit</string>
    <string name="share_your_experience">Share Your Experience</string>
    <string name="name_user">Name user</string>
    <string name="bio_user">Bio User</string>
    <string name="email">Email :</string>
    <string name="no_phone">No Phone : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_posting">Add Posting</string>
    <string name="list_alumni">List Alumni</string>
    <string name="profile_user">Profile User</string>
    <string name="post">Post</string>
</resources>